# RAG

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: base.yaml
configs/audit/: base.yaml  legal_corpus.yaml  legal_corpus_smoke.yaml
configs/benchmark/: generate_v1.yaml  legal_corpus_generate_600.yaml  legal_corpus_validate_600.yaml  validate.yaml
configs/chunking/: base.yaml  legal_corpus.yaml
configs/cleaning/: base.yaml  legal_corpus.yaml
configs/context/: base.yaml
configs/error_analysis/: base.yaml
configs/eval/: ablation.yaml  generation.yaml  retrieval.yaml
configs/experiments/: base.yaml  final_benchmark_v1.yaml  llm_matrix_example.yaml  server_qwen2_5_14b_generation_matrix.yaml  server_qwen3_8b_generation_matrix.yaml
configs/generation/: base.yaml  llm_debug_example.yaml  llm_example.yaml  server_qwen2_5_14b_local.yaml  server_qwen3_8b_local.yaml
configs/retrieval/: base.yaml  build_dense_index.example.yaml  dense_faiss.example.yaml
configs/review/: base.yaml
docs/: benchmark.md  chunking.md  cleaning.md  context_processing.md  error_analysis.md  evaluation.md  experiment_results.md  experiments.md  generation.md  retrieval.md
examples/smoke/: README.md
src/legal_rag/: __init__.py  __main__.py
tests/fixtures/: sample_records.jsonl
tests/unit/: test_anomalies.py  test_benchmark_generation.py  test_benchmark_schema.py  test_bm25_retriever.py  test_citation_alignment.py  test_citation_builder.py  test_cleaning_rules.py  test_config_loader.py  test_context_processing.py  test_duplicates.py  test_error_classifier.py  (+18 more)
(+165 files in other folders)
